add DELETE and API
