# wazo_calld_conference/api.yml
@@ -46,7 +46,7 @@ paths:
           $ref: '#/responses/AnotherServiceUnavailable'
   /conferences/adhoc:
     post:
-      summary: Create an adhoc conferences
+      summary: Create an adhoc conference
       description: '**Required ACL:** `calld.conferences.adhoc.create`'
       parameters:
       - name: body
@@ -59,9 +59,55 @@ paths:
       - conferences
       responses:
         '201':
-          description: Conference Adhoc has been created
+          description: Conference adhoc has been created
           schema:
             $ref: '#/definitions/ConferenceAdhoc'
+        '503':
+          $ref: '#/responses/AnotherServiceUnavailable'
+  /conferences/adhoc/{conference_id}:
+    post:
+      summary: Update an adhoc conference
+      description: '**Required ACL:** `calld.conferences.adhoc.{conference_id}.update`'
+      parameters:
+      - name: body
+        in: body
+        description: Parameters of the conference calls
+        required: true
+        schema:
+          $ref: '#/definitions/ConferenceAdhoc'
+      tags:
+      - conferences
+      responses:
+        '201':
+          description: Conference adhoc has been created
+          schema:
+            $ref: '#/definitions/ConferenceAdhoc'
+        '503':
+          $ref: '#/responses/AnotherServiceUnavailable'
+    delete:
+      summary: Delete an adhoc conference
+      description: '**Required ACL:** `calld.conferences.adhoc.{conference_id}.delete`'
+      parameters:
+        - $ref: '#/parameters/ConferenceID'
+      tags:
+      - conferences
+      responses:
+        '204':
+          description: Conference adhoc has been deleted
+        '503':
+          $ref: '#/responses/AnotherServiceUnavailable'
+  /conferences/adhoc/{conference_id}/{call_id}:
+    delete:
+      summary: Remove a participant of an adhoc conference
+      description: '**Required ACL:** `calld.conferences.adhoc.{conference_id}.{call_id}.delete`'
+      parameters:
+        - $ref: '#/parameters/ConferenceID'
+        - $ref: '#/parameters/CallID'
+      tags:
+      - conferences
+      responses:
+        '204':
+          description: Participants in conference adhoc has been removed
         '503':
           $ref: '#/responses/AnotherServiceUnavailable'
 definitions:
@@ -107,5 +153,11 @@ parameters:
     name: conference_id
     in: path
     description: ID of the conference
+    required: true
+    type: string
+  CallID:
+    name: call_id
+    in: path
+    description: ID of the call
     required: true
     type: string
