# wazo_calld_conference/plugin.py
@@ -11,6 +11,7 @@ from .resources import (
     ConferenceResourceVerify,
     ConferencesAdhocResource,
     ConferenceAdhocResource,
+    ConferenceParticipantAdhocResource,
     )
 from .services import ConferenceService
 from .stasis import ConferenceAdhocStasis
@@ -47,3 +48,4 @@ class Plugin(object):
         api.add_resource(ConferenceResourceVerify, '/conferences/verify/<conference_id>', resource_class_args=[conferences_service])
         api.add_resource(ConferencesAdhocResource, '/conferences/adhoc', resource_class_args=[conferences_service])
         api.add_resource(ConferenceAdhocResource, '/conferences/adhoc/<conference_id>', resource_class_args=[conferences_service])
+        api.add_resource(ConferenceParticipantAdhocResource, '/conferences/adhoc/<conference_id>/<call_id>', resource_class_args=[conferences_service])
